<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_ask_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ava_bg_blue"
    tools:context=".ui.AskPhoneNumberActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/ava_text_white">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/use_email_sign_in" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_whats_your_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/whats_your_phone_number"
        android:textColor="@color/ava_text_white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_phone_number_to_identify_you"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_phone_number_to_identify_you"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_whats_your_phone_number"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/phone_number_used_for_ava"
        android:textColor="@color/ava_text_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_whats_your_phone_number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_number_edit_text"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/I_agree_to_terms_policy"
        android:textColor="@color/ava_text_white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/input_number_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/input_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="@color/ava_bk_white"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:gravity="center"
        android:hint="@string/ask_number_input_hint"
        android:inputType="phone"
        android:textColor="@color/ava_text_black"
        android:textColorHint="@color/ava_text_hint_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
